# Hackathon-l-Physical-AI-and-Humanoid-Robotics-Text-Book

./: .gitignore  .npmignore  README.md  requirements.txt
.specify/memory/: 003-openai-agent-rag-context.md  constitution.md
backend/: README.md  agent.py  api.py  main.py  pyproject.toml  requirements.txt  retrieval.py  start_api.py  test_api.py  test_api_functionality.py  test_sample_queries.py
book/: .gitignore  docusaurus.config.ts  package-lock.json
book/docs/: intro.md
book/docs/module-1/: module-1-chapter-1-introduction-to-ros2-&-robot-control.md  module-1-chapter-2-ros2-nodes,-topics,-services-explained.md  module-1-chapter-3-python-agents-integration-using-rclpy.md  module-1-chapter-4-urdf-for-humanoids-&-launch-files.md
book/docs/module-2/: module-2-chapter-5-physics-simulation-in-gazebo.md  module-2-chapter-6-sensor-simulation-lidar,-depth-camera,-imu.md  module-2-chapter-7-unity-environment-&-human-robot-interaction.md  module-3-chapter-8-isaac-sim-fundamentals-&-synthetic-data.md
docs/: CNAME
specs/001-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-website-content-ingestion-and-vector-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-openai-agent-rag/: api-contracts.md  data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-fastapi-agent-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-generate-robotics-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+42 files in other folders)
